--- a/src/main/resources/templates/users/list.html
+++ b/src/main/resources/templates/users/list.html
@@ -1,35 +1,38 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head>
-  <meta charset="UTF-8">
-  <title>Thymeleaf in Action</title>
+<head th:replace="~{fragments/header::header}">
 </head>
 <body>
-<div th:replace="~{fragments/header::header}"></div>
-<h3 th:text="${title}"></h3>
-<div>
-  <a href="/users/form" th:href="@{/users/form}">创建用户</a>
-</div>
-<table border="1">
-  <thead>
-  <tr>
-    <td>ID</td>
-    <td>Name</td>
-    <td>Email</td>
-  </tr>
-  </thead>
-  <tbody>
-  <tr th:if="${userList.size()} eq 0">
-    <td colspan="3">没有用户信息！</td>
-  </tr>
-  <tr th:each="user : ${userList}">
-    <td th:text="${user.id}"></td>
-    <td><a th:href="@{'/users/'+${user.id}}" th:text="${user.name}"></a></td>
-    <td th:text="${user.email}"></td>
-  </tr>
-  </tbody>
-</table>
+
+<!-- Page content -->
+<div class="container blog-content-container">
+  <h3 th:text="${title}">大方广</h3>
+  <div>
+    <a class="btn btn-default" href="/users/form.html" th:href="@{/users/form}">创建用户</a>
+  </div>
+  <table class="table table-striped">
+    <thead>
+    <tr>
+      <td>ID</td>
+      <td>Email</td>
+      <td>Name</td>
+    </tr>
+    </thead>
+    <tbody>
+    <tr th:if="${userList.iterator().hasNext()} eq false">
+      <td colspan="3">没有用户信息！</td>
+    </tr>
+    <tr th:each="user : ${userList}">
+      <td th:text="${user.id}"></td>
+      <td th:text="${user.email}"></td>
+      <td ><a th:href="@{'/users/'+${user.id}}" th:text="${user.name}"></a></td>
+    </tr>
+    </tbody>
+  </table>
+
+</div><!-- /.container -->
+
 <div th:replace="~{fragments/footer::footer}"></div>
 </body>
 </html>
