--- a/src/main/resources/templates/users/view.html
+++ b/src/main/resources/templates/users/view.html
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
-<head>
-  <meta charset="UTF-8">
-  <title>Thymeleaf in Action</title>
+<head th:replace="~{fragments/header::header}">
 </head>
 <body>
-<div th:replace="~{fragments/header::header}"></div>
-<h3 th:text="${title}">大方广</h3>
-<div>
-  <P><strong>ID: </strong><span th:text="${user.id}"></span></P>
-  <P><strong>Name: </strong><span th:text="${user.name}"></span></P>
-  <P><strong>Email: </strong><span th:text="${user.email}"></span></P>
-</div>
-<div>
-  <a th:href="@{'/users/delete/' + ${user.id}}">删除</a>
-  <a th:href="@{'/users/edit/' + ${user.id}}">修改</a>
-</div>
+
+<!-- Page content -->
+<div class="container blog-content-container">
+
+  <h3 th:text="${title}">大方广</h3>
+  <div>
+    <P><strong>ID: </strong><span th:text="${user.id}"></span></P>
+    <P><strong>Name: </strong><span th:text="${user.name}"></span></P>
+    <P><strong>Email: </strong><span th:text="${user.email}"></span></P>
+  </div>
+  <div>
+    <a th:href="@{'/users/delete/' + ${user.id}}">删除</a>
+    <a th:href="@{'/users/edit/' + ${user.id}}">修改</a>
+  </div>
+</div><!-- /.container -->
+
 <div th:replace="~{fragments/footer::footer}"></div>
 </body>
 </html>
